-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.6.0-beta
-
None
-
Linux x86-64.
-
7e9913f0f540e196ca7e53217d2edf19a9e8ef29
While typing C++ code QtCreator crashes. The stack trace of the crash is attached. The crashed thread seems to be in infinite recursion as I saw thousands of similar stack frames below those in the attached report.
The code that causes this is rather large and I couldn't create a minimal code sample to reproduce. But my code is similar to the following.
{{
namespace NS {
template< typename T >
struct A
{
typedef T char_type;
virtual ~A() {}
virtual void foo() = 0;
};
template< typename T >
struct B
{
typedef T char_type;
virtual ~B() {}
virtual void foo() = 0;
};
template< typename T >
struct C :
public A< T >,
public B< T >
}}
When I type my struct whict is equivalent to C in this example (in particular, when I type its base classes) QtCreator crashes. This minimal code sample doesn't crash, so probably the surrounding code and headers also influence this.
- relates to
-
QTCREATORBUG-7935 crash in base class lookup due to infinitive recursion
-
- Closed
-
- replaces
-
QTCREATORBUG-7915 Qt Creator segfaults on an attempt to write a class derived from itself
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-7887 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 35044,11 | Fix crashes when typing code | 2.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |