src/libs/cplusplus/LookupContext.cpp
@@ -789,14 +789,36 @@ ClassOrNamespace *ClassOrNamespace::nestedType(const Name *name, ClassOrNamespac
         return instantiation;
     }
 
+    if (allBases.isEmpty() || allBases.size() == knownUsings.size())
+        return reference;
+
+    QList<const Name *> fullyQualifiedNameForReferenceClass =
+            LookupContext::fullyQualifiedName(referenceClass);
     // Find the missing bases for regular (non-template) types.
     // Ex.: class A : public B<Some>::Type {};
     foreach (const Name *baseName, allBases) {
         ClassOrNamespace *binding = this;
         if (const QualifiedNameId *qBaseName = baseName->asQualifiedNameId()) {
+            QList<const Name *> fullyQualifiedNameForBaseClass;
+            addNames(baseName, &fullyQualifiedNameForBaseClass);
+            if (compareFullyQualifiedName(fullyQualifiedNameForReferenceClass,
+                                          fullyQualifiedNameForBaseClass)) {
+                continue;
+            }
+
             if (const Name *qualification = qBaseName->base())
                 binding = lookupType(qualification);
+            else if (binding->parent() != 0)
+                //if this is global identifier we take global namespace
+                //Ex: class A{}; namespace NS { class A: public ::A{}; }
+                binding = binding->globalNamespace();
+            else
+                //if we are in the global scope
+                continue;
             baseName = qBaseName->name();
+        }
+        else if (compareName(name, baseName)) {
+            continue;
         }
 
         if (binding) {
@@ -805,7 +827,6 @@ ClassOrNamespace *ClassOrNamespace::nestedType(const Name *name, ClassOrNamespac
                 reference->addUsing(baseBinding);
         }
     }
-
 
     return reference;
 }
